# smokerand-rs

./: Cargo.toml  LICENSE  README.md
examples/kiss2003/: Cargo.toml
examples/kiss2003/src/: lib.rs
examples/lcg127prime/: Cargo.toml
examples/lcg127prime/src/: lib.rs
examples/lcg128/: Cargo.toml
examples/lcg128/src/: lib.rs
examples/lcg32/: Cargo.toml
examples/lcg32/src/: lib.rs
examples/mwcfp/: Cargo.toml
examples/mwcfp/src/: lib.rs
examples/splitmix/: Cargo.toml
examples/splitmix/src/: lib.rs
examples/threefish1024/: Cargo.toml
examples/threefish1024/src/: lib.rs
old/: bindings.rs  lib.rs
smokerand-rs/: Cargo.toml
smokerand-rs/src/: bindings.rs  lib.rs
