[workspace]
members = [
    "smokerand-rs",
    "examples/splitmix",
    "examples/lcg127prime",
    "examples/lcg128",
    "examples/lcg32",
    "examples/kiss2003",
    "examples/threefish1024"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
panic = "abort"
